--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,8 +1,13 @@
 FROM debian:buster
 
 RUN apt-get update \
-	&& apt-get install -y php7.3 php-mysqli php-fpm wget \
+	&& apt-get install -y php7.3 php-mysqli php-fpm wget curl \
 	&& rm -rf /var/lib/apt/lists/*
+	
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+	&& chmod +x wp-cli.phar \
+	&& mv wp-cli.phar /usr/local/bin/wp
+
 
 COPY ./conf/www.conf /var/www/html/
 COPY ./conf/wp-config.php /var/www/
