Modif config maria

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,6 +7,7 @@ COPY tools/setupbdd.sh ./
 
 RUN apt-get update \
 	&& apt-get -y install mariadb-server \
+	&& apt-get -y install procps\
 	&& rm -rf /var/lib/apt/lists/* 
 
 COPY	./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
